@@ -17,6 +17,7 @@
 
 #include "i2o/Method.h"
 #include "interface/shared/i2oXFunctionCodes.h"
+#include "interface/evb/i2oEVBMsgs.h"
 #include "xcept/tools.h"
 
 #include "toolbox/mem/HeapAllocator.h"
@@ -246,13 +247,26 @@ xoap::MessageReference FUResourceBroker::handleFSMSoapMessage(
 //______________________________________________________________________________
 void FUResourceBroker::I2O_FU_TAKE_Callback(toolbox::mem::Reference* bufRef) {
 
+	int currentStateID = -1;
 	fsm_->transitionReadLock();
-	const BaseState& currentState = fsm_->getCurrentState();
+	currentStateID = fsm_->getCurrentState().stateID();
 	fsm_->transitionUnlock();
 
-	bool success = currentState.take(bufRef);
+	if (currentStateID==rb_statemachine::RUNNING) {
+		try {
+			bool eventComplete = res_->resourceStructure_->buildResource(bufRef);
+			if (eventComplete && res_->doDropEvents_)
+			{
+				cout << "dropping event" << endl;
+				res_->resourceStructure_->dropEvent();
+			}
+		}
+		catch (evf::Exception& e) {
+			fsm_->getCurrentState().moveToFailedState(e);
+		}
+	}
+	else {
 
-	if (!success) {
 		stringstream details;
 		details << " More details -> allocated events: "
 				<< res_->nbAllocatedEvents_ << ", pending requests to BU: "
@@ -274,20 +288,54 @@ void FUResourceBroker::I2O_FU_TAKE_Callback(toolbox::mem::Reference* bufRef) {
 void FUResourceBroker::I2O_EVM_LUMISECTION_Callback(
 		toolbox::mem::Reference* bufRef) {
 
+	int currentStateID = -1;
 	fsm_->transitionReadLock();
-	const BaseState& currentState = fsm_->getCurrentState();
+	currentStateID = fsm_->getCurrentState().stateID();
 	fsm_->transitionUnlock();
 
-	bool success = currentState.evmLumisection(bufRef);
+	bool success = true;
+	if (currentStateID==rb_statemachine::RUNNING) {
 
-	if (!success) {
-		LOG4CPLUS_ERROR(
-				res_->log_,
-				"EOL i2o frame received in state "
-						<< fsm_->getExternallyVisibleState()
-						<< " is being lost");
+		I2O_EVM_END_OF_LUMISECTION_MESSAGE_FRAME *msg =
+			(I2O_EVM_END_OF_LUMISECTION_MESSAGE_FRAME *) bufRef->getDataLocation();
+		if (msg->lumiSection == 0) {
+			LOG4CPLUS_ERROR(res_->log_, "EOL message received for ls=0!!! ");
+			EventPtr fail(new Fail());
+			res_->commands_.enqEvent(fail);
+			success=false;
+		}
+		if (success) {
+			res_->nbReceivedEol_++;
+			if (res_->highestEolReceived_.value_ + 100 < msg->lumiSection) {
+				LOG4CPLUS_ERROR( res_->log_, "EOL message not in sequence, expected "
+					<< res_->highestEolReceived_.value_ + 1 << " received "
+					<< msg->lumiSection);
 
+				EventPtr fail(new Fail());
+				res_->commands_.enqEvent(fail);
+				success=false;
+			}
+		}
+		if (success) {
+			if (res_->highestEolReceived_.value_ + 1 != msg->lumiSection)
+				LOG4CPLUS_WARN( res_->log_, "EOL message not in sequence, expected "
+						<< res_->highestEolReceived_.value_ + 1 << " received "
+						<< msg->lumiSection);
+
+			if (res_->highestEolReceived_.value_ < msg->lumiSection)
+				res_->highestEolReceived_.value_ = msg->lumiSection;
+
+			try {
+				res_->resourceStructure_->postEndOfLumiSection(bufRef);
+			} catch (evf::Exception& e) {
+				fsm_->getCurrentState().moveToFailedState(e);
+			}
+		}
 	}
+	else success=false;
+
+	if (!success)  LOG4CPLUS_ERROR(res_->log_,"EOL i2o frame received in state "
+				<< fsm_->getExternallyVisibleState() << " is being lost");
 	bufRef->release();
 }
 
@@ -300,7 +348,6 @@ void FUResourceBroker::I2O_FU_DATA_DISCARD_Callback(
 
 	fsm_->transitionReadLock();
 	const BaseState& currentState = fsm_->getCurrentState();
-	fsm_->transitionUnlock();
 
 	if (res_->allowI2ODiscards_)
 		/*bool success = */
@@ -311,6 +358,7 @@ void FUResourceBroker::I2O_FU_DATA_DISCARD_Callback(
 				"Data Discard I2O message received from SM is being ignored! ShmBuffer was reinitialized!");
 		bufRef->release();
 	}
+	fsm_->transitionUnlock();
 	res_->unlockRSAccess();
 
 	res_->nbDataDiscardReceived_.value_++;
@@ -325,7 +373,6 @@ void FUResourceBroker::I2O_FU_DQM_DISCARD_Callback(
 
 	fsm_->transitionReadLock();
 	const BaseState& currentState = fsm_->getCurrentState();
-	fsm_->transitionUnlock();
 
 	if (res_->allowI2ODiscards_)
 		/*bool success = */
@@ -336,6 +383,7 @@ void FUResourceBroker::I2O_FU_DQM_DISCARD_Callback(
 				"DQM Discard I2O message received from SM is being ignored! ShmBuffer was reinitialized!");
 		bufRef->release();
 	}
+	fsm_->transitionUnlock();
 	res_->unlockRSAccess();
 
 	res_->nbDqmDiscardReceived_.value_++;
